--- a/resources/config.properties
+++ b/resources/config.properties
@@ -5,3 +5,4 @@ test.data.path = resources/testdata/
 excel.name = testData.xlsx
 sheet.name = testData
 content.type = application/json
+retry.count = 1
